# 4story-bot-gui

./: .gitignore  .gitmodules  4story-bot-gui.sln  CMakeLists.txt  CMakePresets.json  Gui.vcxproj  Gui.vcxproj.filters  main.cpp
layout/: container.h
layout/character-tab/: characterContainer.h
layout/farm-spot-tab/: farmSpotContainer.cpp  farmSpotContainer.h
layout/help-tab/: helpContainer.cpp
layout/info-tab/: infoContainer.cpp  infoContainer.h
layout/info-tab/log-viewer/: logViewer.cpp  logViewer.h
layout/settings-tab/: settingsContainer.cpp
lib/: common.h
lib/imgui/: ImGui.vcxproj  ImGui.vcxproj.filters
lib/injector/include/: injector.h
resource/: gui.rc  resource.h
src/gui/: Gui.vcxproj  Gui.vcxproj.filters  main.cpp
src/gui/conf/: bot_conf.ini
src/gui/layout/: container.cpp
src/gui/layout/character-tab/: characterContainer.cpp
src/gui/layout/character-tab/mageKeybindsContainer/: mageKeybindsContainer.cpp  mageKeybindsContainer.h
src/gui/layout/character-tab/warriorKeybindsContainer/: warriorKeybindsContainer.cpp  warriorKeybindsContainer.h
src/gui/layout/help-tab/: helpContainer.h
src/gui/layout/info-tab/log-viewer/: logViewer.cpp
src/gui/layout/settings-tab/: settingsContainer.h
src/gui/resource/: gui.aps  gui.rc
src/imgui/: imgui.vcxproj  imgui.vcxproj.filters
src/injector/: injector.cpp  injector.vcxproj  injector.vcxproj.filters
src/injector/header/: injector.h
src/p4story/: dllmain.cpp  p4story.vcxproj
